# faustroll

./: Makefile  pyproject.toml
faustroll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
faustrollctl/: main.py
faustrollctl/applications/: chromium.py  obsidian.py  vscodium.py
faustrollctl/common/: constants.py  selector.py  utils.py
faustrollctl/functions/: notes.py  projects.py  tasks.py
