[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "faustrollctl",
    "faustrollctl.common",
    "faustrollctl.applications",
    "faustrollctl.functions"
]
exclude = []

[project]
name = "faustroll"
version = "0.0.0"
dependencies = [
    "obsidian-utils @ git+https://gitea.chiliahedron.wtf/john-craig/obsidian-utils@main"
]
requires-python = ">=3.8"

[project.scripts]
faustrollctl = "faustrollctl.main:main"
